# hw6-hmm-viterbi

./: README.md  pyproject.toml
data/: UserCase-Two.npz  UserCase-three.npz
docs/source/: index.rst
notebooks/: example_user_cases.ipynb
src/models/: decoders.py  hmm.py
test/: test_project_deliverable.py  test_user_case.py
