[build-system]
requires = [
	"flit_core >=3.8",
	"python_version >= '3.9'"
	]
build-backend = "flit_core.buildapi"
dynamic=["version"]

[project]
name = "models"
authors = [{name = "Galen Xing", email = "galenxing@berkeley.edu"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["pytest", "numpy", "scipy", "matplotlib", "scikit-learn", "sphinx", "pandas"]

[tool.coverage.run]
source = ["src"] # parent directory of package

[project.urls]
Home = "https://github.com/galenxing/hw6-hmm-viterbi"